Cleaning up and refactoring based on SonarCloud suggestions
Signed-off-by: shams <shamsazeem20@gmail.com>